--- a/jaxb-ri/xjc/src/com/sun/tools/xjc/reader/xmlschema/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/com/sun/tools/xjc/reader/xmlschema/MessageBundle.properties
@@ -138,6 +138,10 @@ ERR_ENUM_MEMBER_NAME_COLLISION = \
 ERR_ENUM_MEMBER_NAME_COLLISION_RELATED = \
     (related to above) the other enum is defined at this location
 
+WARN_ENUM_MEMBER_SIZE_CAP = \
+    Simple type "{0}" was not mapped to Enum due to EnumMemberSizeCap limit. Facets count: {1}, current limit: {2}. \
+    You can use customization attribute "typesafeEnumMaxMembers" to extend the limit.
+
 ERR_CANNOT_GENERATE_ENUM_NAME = \
     Cannot generate a constant name from the enumeration value "{0}". \
     Use <jaxb:typesafeEnumMember name="..."/> to specify one. 
