--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -1,7 +1,7 @@
 # versions
-release.impl.version=2.1.13
+release.impl.version=2.1.14
 release.impl.version.suffix=ea
-release.impl.date=Fall, 2009
+release.impl.date=Summer, 2010
 release.spec.title=Final Release
 release.spec.version=2.1
 release.spec.date=Later 2006
