missing jdk5 dependency

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -54,6 +54,11 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>javax.xml.stream</groupId>
+            <artifactId>stax-api</artifactId>
+            <version>1.0-2</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
