--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,14 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <repositories>
+        <repository>
+            <id>m2.java.net</id>
+            <url>http://download.java.net/maven/2</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
     
     <distributionManagement>
         <site>
