--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -39,14 +39,14 @@
 #
 
 # versions
-release.impl.version=2.2.3
+release.impl.version=2.2.3u2
 release.impl.version.suffix=
 release.impl.date=TBD
 
 release.spec.title=Final
 release.spec.version=2.2.2
-release.spec.date=Nov, 2010
-release.spec.feedback=spec-comments@jsr222.dev.java.net
+release.spec.date=Dec, 2009
+release.spec.feedback=spec-comments@jsr222.java.net
 javaNetProjectName=jaxb
 
 # root workspace
