chameleon schema fix

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -148,3 +148,6 @@ javadoc.nodeprecation=false
 # OSGi
 osgi.root=${jaxb.root}/osgi
 osgi.build=${osgi.root}/build
+
+xsom.version=20110101-SNAPSHOT
+xsom.mvn.path=com/sun/xsom/xsom/${xsom.version}/xsom-${xsom.version}.jar
