integrate mavenized api

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -39,14 +39,9 @@
 #
 
 # versions
+release.spec.version=2.1.1-SNAPSHOT
 release.impl.version=2.1.14
-release.impl.version.suffix=ea
-release.impl.date=Summer, 2010
-release.spec.title=Final Release
-release.spec.version=2.1
-release.spec.date=Later 2006
-release.spec.feedback=spec-comments@jsr222.dev.java.net
-javaNetProjectName=jaxb
+release.impl.version.suffix=-SNAPSHOT
 
 # root workspace
 jaxb.root=${basedir}
@@ -65,6 +60,7 @@ jaxb.libs.util=${jaxb.libs}/util
 jaxb.libs.test=${jaxb-unit.root}/tools/lib/util
 jaxb.docs=${basedir}/docs
 jaxb.dist=${basedir}/dist
+jaxb.build=${basedir}/build
 
 # msv, xsdlib
 msv.bin=${jaxb.libs.redist}/msv.jar
@@ -77,6 +73,7 @@ xjc.gensrc=${xjc.root}/build/src
 xjc.test=${xjc.root}/test
 xjc.classes=${xjc.root}/build/classes
 xjc10.classes=${xjc.root}/build/1.0-classes/1.0
+xjc.compilerarg=-Xbootclasspath/p:${jaxb.libs.redist}/jaxb-api.jar
 
 # runtime 
 runtime.root=${jaxb.root}/runtime
@@ -84,7 +81,7 @@ runtime.src=${runtime.root}/src
 runtime.test=${runtime.root}/test
 runtime.classes=${runtime.root}/build/classes
 runtime.test.classes=${runtime.root}/build/test
-runtime.compilerarg=
+runtime.compilerarg=-Xbootclasspath/p:${jaxb.libs.redist}/jaxb-api.jar
 
 # runtime FI
 runtime-fi.root=${jaxb.root}/runtime-fi
@@ -117,22 +114,6 @@ runtime-deprecated.root=${jaxb.root}/runtime-deprecated
 runtime-deprecated.src=${runtime-deprecated.root}/src
 runtime-deprecated.classes=${runtime-deprecated.root}/build/classes
 
-# spec
-spec.root=${jaxb.root}/spec
-spec.src=${spec.root}/src
-spec.classes=${spec.root}/build/classes
-spec.libs=${spec.root}/build/lib
-spec.docs=${spec.root}/docs
-spec.mif.docs=${spec.root}/docs/mif
-spec.mif.libs=${spec.root}/tools/lib/mif
-spec.mif.docletjar=${spec.mif.libs}/mifdoclet.jar
-spec.mif.templates=${spec.mif.libs}/templates
-
-# dependencies
-jaxp.commons=${jaxb.libs.redist}/sax.jar:${jaxb.libs.redist}/dom.jar:${jaxb.libs.redist}/jaxp-api.jar
-jaxp.parser=${jaxb.libs.redist}/xercesImpl.jar:${jaxp.commons}
-jaxp.transform=${jaxb.libs.redist}/xalan.jar:${jaxp.commons}
-
 # jar manifest template
 manifest.root=${jaxb.root}/docs/manifest
 
@@ -148,6 +129,30 @@ javadoc.nodeprecation=false
 # OSGi
 osgi.root=${jaxb.root}/osgi
 osgi.build=${osgi.root}/build
+osgi.build.rt=${osgi.root}/build/rt
+
+jaxb.samples=${basedir}/samples
+samples.root=${jaxb.root}/samples
+samples.src=${samples.root}/src
+samples.build=${samples.root}/build
+samples.classes=${samples.build}/classes
+samples.samples-src=${samples.root}/samples-src
+
+# JAXB source build Properties ------START------
+external.dir=${jaxb.root}/external
+
+JDK_1.4=/System/Library/Frameworks/JavaVM.framework/Versions/1.4/Home
+JDK_1.5=/System/Library/Frameworks/JavaVM.framework/Versions/1.5/Home
+JDK_1.6=/System/Library/Frameworks/JavaVM.framework/Versions/1.6/Home
+
+jaxb-api.version=${release.spec.version}
+jaxb-api.mvn.path=javax/xml/bind/jaxb-api/${jaxb-api.version}/jaxb-api-${jaxb-api.version}.jar
+jaxb-api-osgi.mvn.path=javax/xml/bind/jaxb-api-osgi/${jaxb-api.version}/jaxb-api-osgi-${jaxb-api.version}.jar
 
 xsom.version=20110101-SNAPSHOT
 xsom.mvn.path=com/sun/xsom/xsom/${xsom.version}/xsom-${xsom.version}.jar
+
+jaxb.version=${release.impl.version}${release.impl.version.suffix}
+jaxb-osgi.mvn.path=com/sun/xml/bind/jaxb-osgi/${jaxb.version}/jaxb-osgi-${jaxb.version}.jar
+
+# JAXB Source build Properties ------END------
