Fix jaxb source build for GF 3.1.1.

--- a/build.properties
+++ b/build.properties
@@ -238,6 +238,9 @@ activation.mvn.path=javax/activation/activation/${activation.version}/activation
 stax-ex.version=1.3-SNAPSHOT
 stax-ex.mvn.path=org/jvnet/staxex/stax-ex/${stax-ex.version}/stax-ex-${stax-ex.version}.jar
 
+sjsxp.version=1.0
+sjsxp.mvn.path=com/sun/xml/stream/sjsxp/${sjsxp.version}/sjsxp-${sjsxp.version}.jar
+
 #fi.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
 #fi1.cvs.tag=FAST_INFOSET_JWSDP_1_6_10
 fi1.version=1.0
