remove snapshot dependency

--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.sun.xsom</groupId>
             <artifactId>xsom</artifactId>
-            <version>20110101-SNAPSHOT</version>
+            <version>20110809</version>
         </dependency>
     </dependencies>
 </project>
