--- a/build.properties
+++ b/build.properties
@@ -39,9 +39,9 @@
 #
 
 # versions
-release.spec.version=2.2.5
-release.impl.version=2.2.5
-release.impl.version.suffix=-SNAPSHOT
+release.spec.version=2.2.3
+release.impl.version=2.2.4
+release.impl.version.suffix=-2
 
 # root workspace
 jaxb.root=${basedir}
